[metadata]
name = sprockets_logging
version = 0.0.0

[options]
py_modules =
    sprockets_logging
install_requires =
    json-scribe>=1.1,<3

[options.extras_require]
testing =
    coverage==6.3
    flake8-comprehensions==3.8.0
    flake8-deprecated==1.3
    flake8-import-order==0.18.1
    flake8-tuple==0.4.1
    flake8==4.0.1
    freezegun==1.1.0

[coverage:run]
branch = True
command_line = -m unittest discover tests --buffer --verbose

[coverage:report]
show_missing = True
include = sprockets_logging.py
omit = tests/*

[flake8]
application-import-names = tests,sprockets_logging
exclude = build,env
import-order-style = pycharm
